# ChangeLog for net-analyzer/opennms
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Sep 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  opennms-1.2.9.1.ebuild:
  Some refinements, and still trying to get ant tasks pulled in/available
  during build

  21 Sep 2007; William L. Thomson Jr. <wltjr@gentoo.org> +metadata.xml,
  +opennms-1.2.9.1.ebuild:
  Initial ebuild for opennms, doesn't compile and still has bundled deps that
  need to be available during build.
